--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*------------------Colours*/
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -14,23 +14,27 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
 .ui-menu-color-home {
-    background: #e67e22;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
-    background: #9b59b6;
+    background-color: #9b59b6;
 }
 
 .ui-menu-color-contact {
-    background: #3498db;
+    background-color: #3498db;
 }
 
 .ui-menu-color-download {
-    background: #525252;
+    background-color: #525252;
 }
 
-/*------------------Special paddings/margins/text*/
+/* ----------------------------------------Special paddings/margins/text */
 
 h1,
 h2,
@@ -63,6 +67,7 @@ h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -70,7 +75,7 @@ h4 {
     margin-bottom: 40px;
 }
 
-/*-------------------Heading*/
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -78,11 +83,10 @@ header {
 
 .heading {
     margin-left: 50px;
-
 }
 
 .logo {
-    background: url(../images/logo.jpg);
+    background: url("../images/logo.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -117,36 +121,36 @@ header {
     font-size: 0;
 }
 
-#nav {
-    margin: 0;
-}
-
 #nav li {
     font-size: 14px;
     padding: 0;
 }
 
-.menu-item {
+#nav {
+    margin: 0;
+}
+
+.menuitem {
     height: 120px;
     text-align: center;
     padding: 0;
 }
 
-.menu-item a {
+.menuitem a {
     width: 100%;
     text-decoration: none;
     color: #fff;
     height: 120px;
 }
 
-.menu-item a i {
+.menuitem a i {
     padding-top: 22px;
     display: block;
     color: #fafafa;
     font-size: 26px;
 }
 
-.menu-item span {
+.menuitem span {
     display: block;
     width: 100%;
     padding-top: 5px;
@@ -157,14 +161,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*-------------------Hover.css*/
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*-------------------Footer*/
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -201,7 +205,7 @@ footer {
     line-height: 7px;
     text-align: center;
     color: #fafafa;
-    background-color: #8f8f8f;
+    background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -209,14 +213,14 @@ footer {
 }
 
 .social-links li a i:hover {
-    background-color: #e84610;
+    background: #e84610;
 }
 
 #footer-details {
     padding: 20px;
 }
 
-/*-------------------Three Reasons*/
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
@@ -227,7 +231,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/*-------------------Personal Info*/
+/* ----------------------------------------Personal Info */
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -260,4 +264,73 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: "";
+    background-color: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
